Adapt project name

--- a/AspNetSample.MVC5/Views/MeetingMinutesOverviews/Create.cshtml
+++ b/AspNetSample.MVC5/Views/MeetingMinutesOverviews/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetSample.MVC5.Models.MeetingMinutesOverview
+﻿@model AspNetSample.MeetingMinutesSystem.Models.MeetingMinutesOverview
 
 @{
     ViewBag.Title = "Create";
