--- a/AspNetSample.MVC5/Views/MeetingMinutesOverviews/Index.cshtml
+++ b/AspNetSample.MVC5/Views/MeetingMinutesOverviews/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AspNetSample.MVC5.Models.MeetingMinutesOverview>
+﻿@model IEnumerable<AspNetSample.MeetingMinutesSystem.Models.MeetingMinutesOverview>
 
 @{
     ViewBag.Title = "Index";
