Add user management

--- a/MeetingMinutesSystem/Views/Home/Index.cshtml
+++ b/MeetingMinutesSystem/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 <div class="jumbotron">
     <h3>Meeting Minutes System</h3>
     <p2 class="lead">Meeting minutes system is the tool for team meeting.For more information, please contact the author!</p2>
-    <p><a href="../MinutesModels/Index">Meeting Minutes System</a></p>
+    <p>Login :<a href="../Authentication/Login">Meeting Minutes System</a></p>
 </div>
